# soundboard

./: Cargo.toml  TODO.txt  rust-streamdeck.service
src/: audio_capture.rs  audio_player.rs  audio_processor.rs  lcd.rs  lib.rs  main.rs
