[package]
name = "soundboard"
version = "0.1.0"
edition = "2024"
default-run = "soundboard"


[dependencies]
elgato-streamdeck = { version = "0.12.0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
pipewire = "0.9.2"
hidapi = "2.6.3"
hound = "3.5.1"
image = "0.25.1"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "soundboard"
path = "src/main.rs"
